correccion de rutas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
          <link rel="stylesheet" href="css/basicos/style_banner.css">
          <link rel="stylesheet" href="css/basicos/style_productos.css">
          <link rel="stylesheet" href="css/variables.css">
-         <link rel="stylesheet" href="../css/componentes/inputs.css">
-         <link rel="stylesheet" href="../css/componentes/botones.css">
+         <link rel="stylesheet" href="css/componentes/inputs.css">
+         <link rel="stylesheet" href="css/componentes/botones.css">
          <link rel="stylesheet" href="css/basicos/style_footer.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,7 @@
                     </div> 
                 </div>
                 <div class="divButton">
-                    <button id="inicioSesion" class="btnLogin"><a href="/html/login.html">Login</a></button>
+                    <button id="inicioSesion" class="btnLogin"><a href="html/login.html">Login</a></button>
                     <div id="greeting"  ></div>
                 </div>
                
@@ -258,8 +258,7 @@
                             </div>
                         <div class="input-container">
                             <textarea name="mensaje" id="mensaje" class="textarea" type="text" 
-                            placeholder="Mensaje" required 
-                            data-mensaje style="width: 400px;"></textarea>
+                            required data-mensaje style="width: 400px;"></textarea>
                             <label class="textarea-label" for="mensaje">Mensaje</label>
                             <span class="input-message-error">Este campo no es valido</span>
                             <button class="button" id="contacto" href="" style="width: 200px;">Enviar Mensaje</a></button>
