correccion de rutas

--- a/html/login.html
+++ b/html/login.html
@@ -62,7 +62,7 @@
         </main>
 
         
-        <legend class="form__link">Si no esta resgistrado, haga click <a href="/html/registrarse.html">Aqui!</a></legend>
+        <legend class="form__link">Si no esta resgistrado, haga click <a href="html/registrarse.html">Aqui!</a></legend>
         
         <footer>
             <div class="footer-prin">
