--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   divProductos.appendChild(agregarElementos);
                   agregarElementos.addEventListener("click", (evento) => {
                     if (sessionStorage.getItem("nombreUsuario") != null){
-                        window.location.href = "/html/crearProducto.html";
+                        window.location.href = "html/crearProducto.html";
                     }
                     else{
                         window.location.href = "../index.html";
