--- a/html/login.html
+++ b/html/login.html
@@ -90,7 +90,7 @@
                             </div>
                         <div class="input-container">
                             <textarea name="mensaje" id="mensaje" class="textarea" type="text" 
-                            placeholder="Mensaje" required 
+                            placeholder="" required 
                             data-mensaje style="width: 400px;"></textarea>
                             <label class="textarea-label" for="mensaje">Mensaje</label>
                             <span class="input-message-error">Este campo no es valido</span>
