Se agrego modulo de agregar productos con ingreso a bd json

--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
                 <a href="" class="links1">Ver todo -></a>
             </div>
             <div class="productos-list" id="productos-list">
-                <!--<img src="imagenes/img1.png" alt="" class="img-list">
+                <img src="imagenes/img1.png" alt="" class="img-list">
                 <img src="imagenes/img2.png" alt="" class="img-list">
                 <img src="imagenes/img3.png" alt="" class="img-list">
                 <img src="imagenes/img4.png" alt="" class="img-list">
                 <img src="imagenes/img5.png" alt="" class="img-list">
-                <img src="imagenes/img6.png" alt="" class="img-list">-->
+                <img src="imagenes/img6.png" alt="" class="img-list">
                 
             </div>
            
             <div class="productos-txt">
-               <!-- <div class="text-detalle">
+               <div class="text-detalle">
                     <p class="text-pro">Produto XYZ</p>
                     <p class="precio-prod">$60,00</p>
                     <a href="" class="link-prod">Ver Producto</a>
@@ -134,7 +134,7 @@
                     <p class="precio-prod">$60,00</p>
                     <a href="" class="link-prod">Ver Producto</a>
                 </div>
-            </div>-->
+            </div>
 
             <div class="productos-title">
                 <p class="text-prod">Consolas</p>
@@ -142,16 +142,16 @@
             </div>
 
             <div class="productos-list">
-              <!--  <img src="imagenes/con1.png" alt="" class="img-list">
+                <img src="imagenes/con1.png" alt="" class="img-list">
                 <img src="imagenes/con2.png" alt="" class="img-list">
                 <img src="imagenes/con6.png" alt="" class="img-list">
                 <img src="imagenes/con4.png" alt="" class="img-list">
                 <img src="imagenes/con5.png" alt="" class="img-list">
-                <img src="imagenes/con3.png" alt="" class="img-list">-->
+                <img src="imagenes/con3.png" alt="" class="img-list">
             </div>
 
             <div class="productos-txt">
-              <!--  <div class="text-detalle">
+               <div class="text-detalle">
                     <p class="text-pro">Control XYZ</p>
                     <p class="precio-prod">$60,00</p>
                     <a href="" class="link-prod">Ver Producto</a>
@@ -189,16 +189,16 @@
             </div>
 
             <div class="productos-list">
-             <!--   <img src="imagenes/div.png" alt="" class="img-list">
+                <img src="imagenes/div.png" alt="" class="img-list">
                 <img src="imagenes/div6.png" alt="" class="img-list">
                 <img src="imagenes/div5.png" alt="" class="img-list">
                 <img src="imagenes/div4.png" alt="" class="img-list">
                 <img src="imagenes/div3.png" alt="" class="img-list">
-                <img src="imagenes/div2.png" alt="" class="img-list">-->
+                <img src="imagenes/div2.png" alt="" class="img-list">
             </div>
 
             <div class="productos-txt">
-               <!-- <div class="text-detalle">
+               <div class="text-detalle">
                     <p class="text-pro">Camisa Atari</p>
                     <p class="precio-prod">$60,00</p>
                     <a href="" class="link-prod">Ver Producto</a>
@@ -228,7 +228,7 @@
                     <p class="precio-prod">$60,00</p>
                     <a href="" class="link-prod">Ver Producto</a>
                 </div>
-            </div>-->
+            </div>
 
         </main>
 
