--- a/html/registroConcluidoProducto.html
+++ b/html/registroConcluidoProducto.html
@@ -19,20 +19,36 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
    </head>
   <body>
+    <header>
+        <div class="caja">
+            <img src="../imagenes/control.png" alt="" h> 
+            <img src="../imagenes/Alura.png" alt=""> 
+            <img src="../imagenes/Geek.png" alt=""> 
+            <div>
+                <div class="container-4">
+                  <input type="search" id="search" placeholder="Que desea buscar..." />
+                  <button class="icon"><i class="fa fa-search"></i></button>
+                </div> 
+            </div>
+            <div class="divButton">
+                <div id="greeting"  ></div>
+            </div>
+        </div>
+    </header>
     <main class="container flex flex--column flex--center">
       <section class="registry-card cartao">
         <span class="registry-card__icon-complete"></span>
         <h1 class="registry-card__title card__title">¡Registro completado!</h1>
         <a href="../index.html" class="button">Inicio</a>
-        <a href="crearProducto.html" class="button">Agregar Otro</a>
+        <a href="crearProducto.html" class="button">Agregar Otro Producto</a>
       </section>
     </main>
     <footer>
       <div class="footer-prin">
           <div class="footer-logo">
-              <img src="imagenes/control.png" alt=""> 
-              <img src="imagenes/Alura.png" alt=""> 
-              <img src="imagenes/Geek.png" alt=""> 
+              <img src="../imagenes/control.png" alt=""> 
+              <img src="../imagenes/Alura.png" alt=""> 
+              <img src="../imagenes//Geek.png" alt=""> 
           </div>
           <div class="links_info">
               <a href="" class="links_info">Quienes Somos</a>
