modulo ver detalles del producto

--- a/html/verDetalleProducto.html
+++ b/html/verDetalleProducto.html
@@ -46,6 +46,15 @@
             </div>
         </header>
         <main> 
+
+            <div id="div-principal" class="div-detalles">
+
+                <div id="prin-detalle" class="div-detalles"></div>
+
+            </div>
+            <div class="div-productosSimilares">
+                <p class="prod-similares">Productos Similares</p>
+            </div>
         </main>
         <footer>
             <div class="footer-prin">
@@ -87,7 +96,7 @@
             </div>
         </footer>
         <input hidden id="sessionName">
-       
+        <script type="module" src="../controllers/detalleUnicoProducto-controller.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
     </body>
 
