Se agrego edicion de producto con validacion de solo usuarios logeados, se agrego funcionalidad al boton consolas y se culmino la seccion de productos smilares

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="caja1">
                 <p class="text-banner">Febrero Promocional</p>
                 <p class="text-banner1">Productos seleccionados con 33% de descuento</p>
-                <button class="boton1">Ver Consolas</button>
+                <a class="boton1" href="#consolas">Ver Consolas</a>
             </div>
         </header>
 
@@ -107,7 +107,7 @@
                 <a href="" class="links1">Ver todo -></a>
             </div>
 
-            <div class="productos-list" data-consola>
+            <div class="productos-list" data-consola id="consolas">
               
             </div>
 
