--- a/html/crearProducto.html
+++ b/html/crearProducto.html
@@ -72,15 +72,15 @@
                     <div class="input-container">
                         <label class="form__label">Categorias: </label>
                         <select id="categorias" data-categoria required>
-                          <option value="starwars">Star Wars</option>
-                          <option value="consolas">Consolas</option>
-                          <option value="diversos">Diversos</option>
+                          <option value="StarWars">Star Wars</option>
+                          <option value="Consolas">Consolas</option>
+                          <option value="Diversos">Diversos</option>
                         </select> 
                     </div>
                     <div class="input-container" style="flex-direction: row;">
-                        <img id="imagenPrevisualizacion" width="100px" height="100px" style="order: 0;visibility: hidden;">
                         <input placeholder="" id="foto" type="file" class="input-file" 
                         placeholder="hola" required accept="image/png, .jpeg, .jpg" data-img/>
+                        <img id="imagenPrevisualizacion" width="100px" height="100px" style="order: 0;visibility: hidden;">
                         
                         <label for="" class="textProducto">O&nbsp;&nbsp;&nbsp;</label>
                         <label for="" class="textProducto1"> &nbsp;&nbsp;&nbsp;Busque en su Computador</label>
